--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "carousel",
   "dependencies": {
     "angular": "~1.5.8",
-    "angular-animate": "~1.5.8",
+    "angular-touch": "~1.5.8",
     "viewport-units-buggyfill": "latest"
   }
 }
